--- a/templates/user/confirm_password.html
+++ b/templates/user/confirm_password.html
@@ -13,7 +13,7 @@
 
             <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
 
-                <form style="width: 23rem;" method="post" action="">
+                <form style="width: 23rem;" method="post" action="{% url 'CONFIRM' %}">
 
                     <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">ثبت گذر واژه جدید</h3>
 
