--- a/templates/user/verification_email.html
+++ b/templates/user/verification_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
-    Hi {{ user.username }}
-    Please click link below to confirm your registeration : 
+    سلام {{ user.username }}
+    برای تعویض رمز عبور خودت از لینک زیر کمک بگیر : 
 
     {{ protocol }}://{{domain}}{% url 'RESET' uidb64=uid token=token %}
 {% endautoescape %}
